# javaqml

./: .gitignore  CMakeLists.txt  DOtherSideJNI.c  DOtherSideJNI.cpp  DOtherSideJNI.h  DOtherSideJNI.java  Main.java  Main.qml  QApplication.java  QMetaObject.java  QObject.java  QProperty.java  QQmlApplicationEngine.java  QQmlContext.java  QUrl.java  QVariant.java  QmlMetaObjectBuilder.java  README.md  TestQmlMetaObjectBuilder.java  Util.java  build.gradle
